(fix): fix terms and conditions modal to close when button is pressed and show info on dark mode

--- a/src/front/styles/index.scss
+++ b/src/front/styles/index.scss
@@ -14,6 +14,14 @@ body {
     color: #f28181;
 }
 
+.bg-coral {
+    background-color: #f28181;
+}
+
+.bg-darkcoral {
+    background-color: #8f3749;
+}
+
 // GENERAL STYLES // 
 
 .divisionGuiaYBotones {
